src/app/components/main/main.component.scss
main{
    color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    width: 100%;
    max-width: 35rem;
    height: 100%;
    margin-left: auto;
    margin-right: auto;

    >div{
        border: 1px solid white;
        width: 95%;
        // height: 95%;
        padding-left: 5px;
        &:first-child{
            // height: 12em;
            margin-top: 8px;
            border-top-left-radius: 12px;
            border-top-right-radius: 12px;
        }
        &:last-child{
            height: fit-content;
            margin-bottom: 8px;
            margin-top: -1px;
            border-bottom-left-radius: 12px;
            border-bottom-right-radius: 12px;
        }
    }
}

.storyText{
    font-size: 1.2em;
    overflow-y: hidden;
    margin: 0;
    min-height: 12em;
    span{
        display: inline-block;
        padding: 0 !important;
        padding-top: 3px !important;
        white-space: pre;
        &:first-child{
            padding-left: 5px !important;
        }
    }
}

.inventoryDiv, .statsDiv, .settingsDiv, .statsDivTop, .settingsDivTop {
    margin-top: -1px;
    min-height: 8em;
    height: 45%;
    p.header:first-of-type{
        border-top: none;
    }
}

.equipmentDiv, .playerOptions{
    margin-top: -1px;
    min-height: 8em;
    height: 25%;
}

.equipmentDivTop, .storyText{
    margin-top: -1px;
    min-height: 8em;
    height: 65%;
}

.displaySwap{
    &:hover{
        color: black;
        background-color: white;
        cursor: pointer;
        padding-left: 2.5px;
        padding-right: 2.5px;
    }
}

.detailsPlaceholder{
    color: white; 
    font-size: 1.2em !important;
    display: flex;
    justify-content: center;
    align-items: center;
}

//FIXME: InventoryDivTop on smaller phone size screen is overflownig-x  - not sure why, equipment page is fine - The display grid and the css column thing are screwing thiings up
.inventoryDivTop, .equipmentDivTop{
    display: grid;
    grid-template-rows: 1fr 10fr;
    padding-left: 2.5px !important;
    margin-right: 2.5px;
    .headerDiv{
        border-bottom: 1px solid white;
        display: flex;
        align-items: center;
        justify-content: space-between;
        margin-bottom: 10px;
        font-size: 1.35em;
        p{
            margin: 5px;
        }
    }
    
    p.indent{
     margin-left: 20px;
     font-size: 1em;
     margin-top: 2.5px;
     margin-bottom: 6px;
    //  &:nth-child(odd){
    //     color: #a4d2ff;
    //  }
    }
    p.indent2x{
        margin-left: 40px;
        font-size: 1em;
        margin-top: 2.5px;
        margin-bottom: 4px;
    }
}

p.header{
    font-size: 1.35em;
    margin-bottom: 5px;
    margin-top: 1em;
    text-decoration: underline;
    border-top: 1px solid #9f9f9f;
    padding-top: 7px;
    &:first-of-type{
        margin-top: 5px;
    }
}

.noBorder{
    border: none !important;
}

.indentOnly{
    margin-left: 20px !important;
}

.infoDiv{
    width: 32em;
    p.header{ 
        border-top: none;
        padding-top: 0 !important;
        margin-top: 0 !important;
        margin-left: 20px;
     }
}

section.item {
    min-height: 5em;
    max-height: 18em;
    -webkit-column-count: 3;  /* Chrome, Safari, Opera */
    -moz-column-count: 3;     /* Firefox */
    column-count: 3;
    column-fill: auto;
    column-width: auto;
    column-gap: 12px;
    >div{
        font-size: 1.2em;
        margin-left: 10px;
        width: max-content;
        height: max-content;
        padding-left: 2.5px;
        padding-right: 2.5px;
        &:hover{
            color: black;
            background-color: white;
            cursor: pointer;
            .equipped{
                filter: none;
            }
        }
    }
  }

  .itemCategory{
    max-height: 100% !important;
  }

section.display {
    -webkit-column-count: 2;  /* Chrome, Safari, Opera */
    -moz-column-count: 2;     /* Firefox */
    column-count: 2;
    column-fill: auto;
    column-width: auto;
    max-height: 280px;
    font-size: 1.2em;
    div{
        font-size: 1.1em;
        margin-left: 10px;
        font-size: 1.1em;
        width: 200%;
        height: max-content;
        padding-left: 2.5px;
        padding-right: 2.5px;
        margin: 0;
    }
  }

.playerOptions p{
    margin: 0;
    padding: 0;
    font-size: 1.2rem;
    margin-bottom: 10px;
    
    &:hover{
        color: white;
        background-color: black;
        cursor: auto;
    }
}

#playerMainOptions{
    p{
        width: max-content;
        padding-left: 5px;
        &:first-of-type{
            padding-top: 5px;
        }
    }
}

.gameOptions{
    height: 25px !important;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    padding-left: 2.5px !important;
    padding-right: 2.5px;
    div{
        width: 100%;
        &:first-child{ border-right: 1px solid white; }
        &:last-child{ border-left: 1px solid white; }
        &:nth-child(2){ border-right: 1px solid white; }
        &:hover{
            color: black;
            background-color: white;
            cursor: pointer;
        }
        p{
            text-align: center;
            margin: 0;
            font-size: 1.2em;
        }
    }
}

.active{
    color: black;
    background-color: white;
    cursor: pointer;
    .equipped{
        filter: none;
    }
}

.partyForm {
    display: flex;
    height: 100%;
    justify-content: space-evenly;
    label{ border-bottom: 1px solid white; }
    min-height: 6em;
}

.memberBox {
    border: 1px solid white;
    min-height: 85px;
    max-height: 93px;
    width: 30%;
    margin-bottom: 5px;
    margin-top: 5px;
    
    p{
        padding-top: 0px;
        margin: 0;
    }
}

//Dynamic widths for memberBox for 1, 2, or 3 party members
.partyOfOne{ width: 90% !important; }
.partyOfTwo{ width: 45% !important; }
.partyOfThree{ width: 30% !important; }

.innerBoxWrapper{
    max-height: 93px;
    display: grid;
    grid-template-rows: 2fr 1fr 1fr;
    text-align: center;
    justify-items: center;
}

.memberSelected{
    border: 5px solid white !important;
}

.invisible{
    visibility: hidden;
}

.underline{
    text-decoration: underline;
}

.hidden{
    display: none;
}

.showOverflow{
    overflow-y: scroll;
}

.overflowAuto{
    overflow-y: auto;
    overflow-x: hidden;
}

.equipmentDetails{
    p{
        font-size: 1.2em;
        margin: 5px;
    }
}

.equipmentOptions{
    max-height: 33px;
    border-top: 1px solid white;
    font-size: 1.25em;
    display: flex;
    justify-content: space-between;
    p{
        margin: 5px;
        padding-left: 2.5px;
        padding-right: 2.5px;
        &:hover{
            color: black;
            background-color: white;
            cursor: pointer;
        }
    }
    p.invisible{
        width: 1px;
    }
}

.equipped{
    filter: invert(99%) sepia(1%) saturate(3395%) hue-rotate(270deg) brightness(113%) contrast(101%);
    vertical-align: middle;
    height: 22px;
}

.statUp, .statGained{
    color: #4caf50;
}

.statDown{
    color: rgb(193, 0, 0);
}

.statRemoved{
    color: #9f9f9f;
    text-decoration: line-through;
}

.removeSpace{
    margin-left: -3.5px;
}

.actionDisabled{
    color: #9f9f9f !important;
    &:hover{
        color: #9f9f9f !important;
        background-color: black !important;
        cursor: default !important;
    }
}

@media (hover: hover) {
    .playerOptions p:hover {
    /* solves sticky problem */
    color: black;
    background-color: white;
    cursor: pointer;
    }
}

@media only screen and (max-width: 600px) {

    section.item {
        min-height: 5em;
        max-height: 25em;
        -webkit-column-count: 2;  /* Chrome, Safari, Opera */
        -moz-column-count: 2;     /* Firefox */
        column-count: 2;
        column-fill: auto;
        column-width: auto;
        column-gap: 12px;
        div{
            font-size: 1.2em;
            margin-left: 10px;
            width: max-content;
            height: max-content;
            padding-left: 2.5px;
            padding-right: 2.5px;
        }
      }
    
}

